--- a/templates/junior/new-logo.html
+++ b/templates/junior/new-logo.html
@@ -9,7 +9,7 @@
         {% from "common/centered_button.html" import centered_button %} 
         {% from "common/card.html" import card %} 
         {% call card("Nouveau logo") %}
-        Bonjour, {{user}}
+        Bonjour, {{user or ""}}
 
 
         La junior {{junior.name}} demande a changer de logo
