add provider settings

--- a/templates/example/docker.html
+++ b/templates/example/docker.html
@@ -6,7 +6,7 @@
 <mail_content>
 
     <body>
-        {% from "common/centered_button.html" import centered_button %} {% from "common/card.html" import card %} {% call card("La sauvegarde a échouée") %}
+        {% from "common/centered_button.html" import centered_button %} {% from "common/card.html" import card %} {% call card("Example") %}
 
         <div style="white-space: pre-wrap">
             The backup failed at {{operation_date}}, if the problem persists, contact an administrator
